syntax = "proto3";

option go_package = "github.com/kidsan/todo-app/proto";

package proto;

// The Todo service definition.
service Todos {
  rpc Get (GetRequest) returns (TodoListReply) {}
  rpc Save(TodoRequest) returns (TodoReply) {}
  rpc Find(TodoIdentifier) returns (TodoReply) {}
  rpc Update(TodoUpdate) returns (TodoReply) {}
}

message TodoRequest {
  int32 id = 1;
  string name = 2;
  string description = 3;
  repeated TaskRequest tasks = 4;
}

message TodoReply {
  int32 id = 1;
  string name = 2;
  string description = 3;
  repeated TaskReply tasks = 4;
}

message TodoUpdate {
  int32 id = 1;
  string name = 2;
  string description = 3;
  repeated TaskRequest tasks = 4;
}

message TodoIdentifier {
  int32 id = 1;
}

message TodoListReply {
  repeated TodoReply todos = 1;
}

message GetRequest {}

message TaskReply {
  int32 id = 1;
  string name = 2;
}

message TaskRequest {
  int32 id = 1;
  string name = 2;
}